--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,16 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 96%;
+	height: 100%;
 	overflow: hidden;
 }
+/* WebKit (Chrome, Safari, Opera) */
+::-webkit-scrollbar {
+	width: 0px; /* width of the scrollbar */
+  }
+
+
+
 
 .circles li {
 	position: absolute;
@@ -87,15 +94,36 @@
 	width: 20px;
 	height: 20px;
 	animation-delay: 2s;
-
 	animation-duration: 12s;
 }
+.circles li:nth-child(16) {
+	left: 10%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 2s;
+	animation-duration: 12s;
+}
+
+.circles li:nth-child(17) {
+	left: 10%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 2s;
+	animation-duration: 12s;
+}
+.circles li:nth-child(18) {
+	left: 10%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 2s;
+	animation-duration: 12s;
+}
+
 
 .circles li:nth-child(3) {
 	left: 70%;
 	width: 20px;
 	height: 20px;
-
 	animation-delay: 4s;
 }
 
@@ -108,6 +136,36 @@
 }
 
 .circles li:nth-child(5) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+}
+.circles li:nth-child(11) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+}
+.circles li:nth-child(12) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+}
+.circles li:nth-child(13) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+}
+.circles li:nth-child(14) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+}
+.circles li:nth-child(15) {
 	left: 65%;
 	width: 20px;
 	height: 20px;
